[package]
name = "ads_forwarder_rs"
version = "1.2.1"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
description = "Forwarder for Beckhoff TCP/UDP connections."
edition = "2018"

[[bin]]
name = "ads_forwarder_rs"
path = "src/main.rs"

[dependencies]
ads = "0.4"
crossbeam-channel = "0.5.1"
byteorder = "1.4.3"
structopt = "0.3.25"
mlzutil = "0.2.1"
mlzlog = "0.7.0"
anyhow = "1.0.20"
log = "0.4.6"
signal-hook = "0.3.14"
# Rust 1.48
systemstat = "<0.1.12"
