[package]
name = "ads_forwarder"
version = "1.3.0"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
description = "Forwarder for Beckhoff TCP/UDP connections."
rust-version = "1.63"
edition = "2021"

[[bin]]
name = "ads_forwarder_rs"
path = "src/main.rs"

[dependencies]
ads = "0.4.3"
atty = "0.2.14"
crossbeam-channel = "0.5.13"
byteorder = "1.5.0"
mlzutil = "0.3.0"
mlzlog = "0.8.2"
anyhow = "1.0.86"
log = "0.4.22"
signal-hook = "0.3.17"
systemstat = "0.2"
clap = { version = "3.2", features = ["derive", "cargo"] }
